# rannikkoasemat

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: fmi_api.rs  lib.rs  main.rs  notes.md  responder.rs  routes.rs  stations.rs  utils.rs
src/routes/: index.rs  weather.rs
src/utils/: map_degrees_to_compass.rs
static/: main.css
templates/: index.html.hbs  weather.html.hbs
