[package]
name = "rannikkoasemat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.22.0"
futures = "0.3.28"
rocket = "0.5.0-rc.3"
rocket_dyn_templates = {version = "0.1.0-rc.3", features = ["handlebars"]}
chrono = "0.4.26"
chrono-tz = "0.8.3"
