[package]
name = "rannikkoasemat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31.0"
futures = "0.3.28"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = {version = "0.2.0", features = ["handlebars"]}
chrono = "0.4.38"
chrono-tz = "0.9.0"
http-cache-reqwest = "0.14.0"
reqwest-middleware = "0.3.1"
